# finops-platform

./: .env.example  .gitignore  CHANGELOG.md  README.md  cli.py  finops.py  pyproject.toml
.github/workflows/: analyst-manual.yml  publish-modules.yml  trader-manual.yml
analyst/: edgar.py  report.py  summarize.py
docs/: index.html
docs/analyst/: index.html
docs/trader/: index.html
platform_core/: config.py  publish.py  report_template.py
testmodule/docs/: index.html
tests/: conftest.py  test_analyst_text_utils.py  test_edgar_helpers.py  test_report_template.py  tests_cli_smoke.py
trader/: report.py
