[build-system]
requires = ["setuptools>=69","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finops-platform"
version = "0.2.2"
description = "FinOps Platform - Analyst module and shared tooling"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Nissan Holzer" }]
dependencies = []

[tools.setuptools]
packages = ["analyst","platform_core"] # simple explicit packages for now

[project.scripts]
finops = "cli:main"