[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finops-platform"
version = "0.2.2"
description = "FinOps Platform — Analyst module and shared tooling"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Nissan Holzer" }]

# keep runtime deps in requirements.txt for now

[tool.setuptools]
packages = ["analyst", "platform_core"]  # ← explicit, no auto-discovery
py-modules = ["cli"]

[project.scripts]
finops = "cli:main"
